[gd_scene load_steps=6 format=3 uid="uid://dab8hmgvuyg3w"]

[ext_resource type="Texture2D" uid="uid://bd31acschtb4d" path="res://Untitled.001.png" id="1_3gx2w"]
[ext_resource type="Script" path="res://main.gd" id="1_rul8t"]
[ext_resource type="Texture2D" uid="uid://1j3dno55561" path="res://white.png" id="2_66fsm"]
[ext_resource type="Texture2D" uid="uid://c3e7ydrjlvhvi" path="res://pin.png" id="3_dvhkk"]
[ext_resource type="PackedScene" uid="uid://dc5djdvl677px" path="res://kuwait.tscn" id="4_jpp3i"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rul8t")

[node name="White" type="Sprite2D" parent="."]
modulate = Color(0.24, 0.708667, 1, 1)
position = Vector2(958.5, 539.5)
scale = Vector2(7.676, 4.316)
texture = ExtResource("2_66fsm")

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(967, 540)
scale = Vector2(1.04873, 1.04873)
texture = ExtResource("1_3gx2w")
metadata/_edit_lock_ = true

[node name="Kuwait" type="TextureButton" parent="."]
offset_left = 1082.0
offset_top = 353.0
offset_right = 1210.0
offset_bottom = 481.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("3_dvhkk")
texture_pressed = ExtResource("3_dvhkk")
texture_hover = ExtResource("3_dvhkk")
texture_disabled = ExtResource("3_dvhkk")
texture_focused = ExtResource("3_dvhkk")

[node name="VisitButton" type="Button" parent="."]
visible = false
offset_left = 877.0
offset_top = 414.0
offset_right = 1192.0
offset_bottom = 507.0
theme_override_font_sizes/font_size = 32
text = "Visit Kuwait?"

[node name="Kuwait2" parent="." instance=ExtResource("4_jpp3i")]
visible = false

[connection signal="pressed" from="Kuwait" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="VisitButton" to="." method="_on_visit_button_pressed"]
